# anchor-admin-instructions

./: Anchor.toml  README.md
programs/anchor-admin-instructions/: Cargo.toml
programs/anchor-admin-instructions/src/: lib.rs
programs/anchor-admin-instructions/src/instructions/admin/: initialize_admin_config.rs
tests/: anchor-admin-instructions.ts
